[gd_scene load_steps=10 format=3 uid="uid://c74c7gcct02cs"]

[ext_resource type="Texture2D" uid="uid://dxqltolsias3m" path="res://assets/Tiles/Transparent/tile_0346.png" id="1_embv5"]
[ext_resource type="Script" path="res://scripts/fly.gd" id="1_j2ue8"]
[ext_resource type="Texture2D" uid="uid://b4x5vfbscefxd" path="res://assets/Tiles/Transparent/tile_0326.png" id="2_dqq60"]
[ext_resource type="AudioStream" uid="uid://dtgrcgjfna047" path="res://assets/sound/sfx/ui/Fly.wav" id="4_sb327"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_13vpk"]
size = Vector2(16, 16)

[sub_resource type="Animation" id="Animation_lees5"]
resource_name = "Float"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("1_embv5"), ExtResource("2_dqq60")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector2(0, 0), Vector2(2.08165e-12, -5)]
}

[sub_resource type="Animation" id="Animation_dktyl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_embv5")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lyraa"]
_data = {
"Float": SubResource("Animation_lees5"),
"RESET": SubResource("Animation_dktyl")
}

[sub_resource type="Curve" id="Curve_j17lj"]
_data = [Vector2(0.0140263, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Fly" type="Area2D"]
position = Vector2(2.08165e-12, 2.08165e-12)
collision_layer = 32
collision_mask = 20
script = ExtResource("1_j2ue8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2.08165e-12, -3)
shape = SubResource("RectangleShape2D_13vpk")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.815686, 0.815686, 0, 1)
texture = ExtResource("1_embv5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lyraa")
}

[node name="PoofParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 20
lifetime = 2.0
one_shot = true
explosiveness = 1.0
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 4.04
spread = 180.0
gravity = Vector2(2.08165e-12, 2.08165e-12)
initial_velocity_max = 5.0
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_j17lj")

[node name="EatenSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_sb327")
volume_db = -20.0
bus = &"SFX"

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
